--- a/index.html
+++ b/index.html
@@ -41,59 +41,80 @@
 	</section>
 	<section id="second-section" class="bg-brown">
 		<div class="container">
-			  	<div class="col-xs-12 contenido">
-			  		<h1>OUR VALUES</h1>
-			  		<br/><br/>
-			  		<hr color="black" size=1 width="150">
-			  		<hr color="black" size=1 width="150">
-			  		<br/><br/>
-			  		<h4>We create flavorsome, traditional dishes using fresh, local ingredients.</h4>
-			  	</div> 
 			<div class="row">
-			  	<div class="col-xs-12 col-md-4 col1">
-			  		<h2><strong class="spaced">INGREDIENTS</strong></h2>
-		  			<ul>
-		  				<li>Fresh, local ingredients</li>
-		  				<li>All natural and organic</li>
-		  				<li>Carefully hand selected</li>
-		  				<li>Tested for quality and taste</li>
-		  			</ul>
-		  		</div>
-		  	</div>
-		  	<div class="row">
-		  		<div class="col-xs-12 col-md-4 col2">
-					<h2><strong class="spaced">TECHNIQUE</strong></h2>
-					<ul>
-		  				<li>Classic combinations</li>
-		  				<li>Complex flavor profiles</li>
-		  				<li>Traditional preparation</li>
-		  				<li>Hygenic and sanitary</li>
-		  			</ul>
-		  		</div> 
-		  	</div>	
-		  	<div class="row">
-		  		<div class="col-xs-12 col-md-4 col3">
-		  			<h2><strong class="spaced">COMMUNITY</strong></h2>
-		  			<ul>
-		  				<li>Bakery rewards program</li>
-		  				<li>Private events</li>
-		  				<li>Personal catering menus</li>
-		  				<li>Nightly community specials</li>
-		 			</ul>
-				</div> 
-			</div> 		
+				<div class="col-xs-12 col-md-12 contenido">
+					<h1>OUR VALUES</h1>
+					<hr color="black" size=1 width="150">
+					<hr color="black" size=1 width="150">
+					<h4>We create flavorsome, traditional dishes using fresh, local ingredients.</h4>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-md-4 col1">
+					<div class="row ">
+						<div class="col-xs-3">
+							<i class="fa fa-shopping-cart" aria-hidden="true"></i>
+						</div>
+						<div class="col-xs-9">
+							<h2><strong class="spaced">INGREDIENTS</strong></h2>
+							<ul>
+							<li>Fresh, local ingredients</li>
+							<li>All natural and organic</li>
+							<li>Carefully hand selected</li>
+							<li>Tested for quality and taste</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-4 col2">
+					<div class="row ">
+						<div class="col-xs-3">
+							<i class="fa fa-cutlery" aria-hidden="true"></i>
+						</div>
+						<div class="col-xs-9">
+							<h2><strong class="spaced">TECHNIQUE</strong></h2>
+							<ul>
+				  				<li>Classic combinations</li>
+				  				<li>Complex flavor profiles</li>
+				  				<li>Traditional preparation</li>
+				  				<li>Hygenic and sanitary</li>
+				  			</ul>
+						</div>
+					</div>
+				</div>
+					<div class="col-xs-12 col-md-4 col3">
+						<div class="row ">
+							<div class="col-xs-3">
+								<i class="fa fa-users" aria-hidden="true"></i>
+							</div>
+							<div class="col-xs-9">
+								<h2><strong class="spaced">COMMUNITY</strong></h2>
+					  			<ul>
+					  				<li>Bakery rewards program</li>
+					  				<li>Private events</li>
+					  				<li>Personal catering menus</li>
+					  				<li>Nightly community specials</li>
+					 			</ul>
+							</div>
+						</div>
+					</div>
+			</div>
 		</div>
 	</section>
 	<section id="third-section">
-		<div class="second-img">
+		<div>
 			<h2>Truly great food is a combination of quality<br/> ingredients, creativity, and attention to detail.</h2>
+			<br/><br/>
+	  		<hr color="black" size=1 width="150">
+	  		<hr color="black" size=1 width="150">
+	  		<br/><br/>
 			<button id="btn" class="btn" type="button" >
 				MEET OUR TEAM
 			</button>
 		</div>
 	</section>
-	<section id="third-section">
-		<div class="second-img">
+	<section id="fourth-section">
+		<div>
 			<h2>PEOPLE</h2>
 			<br/>
 			<h4>We are a group of professionals and artisan chefs whith a passion for culinary excellence.</h4>
@@ -102,53 +123,53 @@
 	  		<hr color="black" size=1 width="150">
 	  		<br/><br/>
 		</div>
-		<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-			  <!-- Indicators -->
-			  <ol class="carousel-indicators">
-			    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-			    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-			    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-			    <li data-target="#carousel-example-generic" data-slide-to="3"></li>
-			  </ol>
-			  <!-- Wrapper for slides -->
-			  <div class="carousel-inner" role="listbox">
-			    <div class="item active">
-			      <img src="img/all.jpg" alt="Family">
-			      <div class="carousel-caption">
-			     	Familia
-			      </div>
-			    </div>
-			    <div class="item">
-			      <img src="img/portada.jpg" alt="Regio">
-			      <div class="carousel-caption">
-			        Regio
-			      </div>
-			    </div>
-			    <div class="item">
-			      <img src="img/uno.jpg" alt="Cosita">
-			      <div class="carousel-caption">
-			        Cosita
-			      </div>
-			    </div>
-			    <div class="item">
-			      <img src="img/cosita.jpg" alt="Uno">
-			      <div class="carousel-caption">
-			        Uno
-			      </div>
-			    </div>
-			  </div>
-			  <!-- Controls -->
-			  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-			    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-			    <span class="sr-only">Previous</span>
-			  </a>
-			  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-			    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-			    <span class="sr-only">Next</span>
-			  </a>
-			</div>
-		</div>
-	
 	</section>
+	<section id="fifth-section">
+		<div>
+			<h2>PRESS</h2>
+			<br/><br/>
+	  		<hr color="black" size=1 width="150">
+	  		<hr color="black" size=1 width="150">
+	  		<br/><br/>
+	  		<p>Hereś what the critics are saying.</p>
+	  		<br/><br/>
+	  		<h4>"A UNIQUE BLEND OF FLAVORS AT THIS RESTAURANT MADE<br/>
+	  		FOR AN UNFORGETTABLE CULINARY ADVENTURE."</h4>
+	  		<br/><br/>
+	  		<hr color="black" size=1 width="150">
+	  		<hr color="black" size=1 width="150">
+	  		<br/><br/>
+	  		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum dolores quaerat aut, atque sint accusamus, obcaecati praesentium ratione cumque inventore fugiat quibusdam assumenda nemo facilis modi recusandae quos eius iste?</p>
+		</div>
+	</section>
+	<section id="sixth-section">
+		<div>
+	  		<h4>SUBSCRIBE TO OUR NEWSLETTER!</h4>
+	  		<br/><br/>
+	  		<hr color="black" size=1 width="150">
+	  		<hr color="black" size=1 width="150">
+	  		<br/><br/>
+	  		<input type="email" placeholder="Email address..."><button class="btn-subscribe">SUBSCRIBE!</button>
+		</div>
+	</section>
+	<section id="fifth-section">
+		<div>
+			<h2>PRESS</h2>
+			<br/><br/>
+	  		<hr color="black" size=1 width="150">
+	  		<hr color="black" size=1 width="150">
+	  		<br/><br/>
+	  		<p>Hereś what the critics are saying.</p>
+	  		<br/><br/>
+	  		<h4>"A UNIQUE BLEND OF FLAVORS AT THIS RESTAURANT MADE<br/>
+	  		FOR AN UNFORGETTABLE CULINARY ADVENTURE."</h4>
+	  		<br/><br/>
+	  		<hr color="black" size=1 width="150">
+	  		<hr color="black" size=1 width="150">
+	  		<br/><br/>
+	  		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum dolores quaerat aut, atque sint accusamus, obcaecati praesentium ratione cumque inventore fugiat quibusdam assumenda nemo facilis modi recusandae quos eius iste?</p>
+		</div>
+	</section>
+
 </body>
 </html>
