img fourth section, color, font size, aline

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>landing sumo</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway:400,100,200,300,600,500,700,800,900" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="assets/css/style.css">
@@ -56,7 +57,7 @@
 							<i class="fa fa-shopping-cart" aria-hidden="true"></i>
 						</div>
 						<div class="col-xs-9">
-							<h2><strong class="spaced">INGREDIENTS</strong></h2>
+							<h3><strong class="spaced">INGREDIENTS</strong></h3>
 							<ul>
 							<li>Fresh, local ingredients</li>
 							<li>All natural and organic</li>
@@ -72,7 +73,7 @@
 							<i class="fa fa-cutlery" aria-hidden="true"></i>
 						</div>
 						<div class="col-xs-9">
-							<h2><strong class="spaced">TECHNIQUE</strong></h2>
+							<h3><strong class="spaced">TECHNIQUE</strong></h3>
 							<ul>
 				  				<li>Classic combinations</li>
 				  				<li>Complex flavor profiles</li>
@@ -82,59 +83,118 @@
 						</div>
 					</div>
 				</div>
-					<div class="col-xs-12 col-md-4 col3">
-						<div class="row ">
-							<div class="col-xs-3">
-								<i class="fa fa-users" aria-hidden="true"></i>
-							</div>
-							<div class="col-xs-9">
-								<h2><strong class="spaced">COMMUNITY</strong></h2>
-					  			<ul>
-					  				<li>Bakery rewards program</li>
-					  				<li>Private events</li>
-					  				<li>Personal catering menus</li>
-					  				<li>Nightly community specials</li>
-					 			</ul>
-							</div>
+				<div class="col-xs-12 col-md-4 col3">
+					<div class="row ">
+						<div class="col-xs-3">
+							<i class="fa fa-users" aria-hidden="true"></i>
+						</div>
+						<div class="col-xs-9">
+							<h3><strong class="spaced">COMMUNITY</strong></h3>
+				  			<ul>
+				  				<li>Bakery rewards program</li>
+				  				<li>Private events</li>
+				  				<li>Personal catering menus</li>
+				  				<li>Nightly community specials</li>
+				 			</ul>
 						</div>
 					</div>
+				</div>
 			</div>
 		</div>
 	</section>
 	<section id="third-section">
-		<div>
-			<h2>Truly great food is a combination of quality<br/> ingredients, creativity, and attention to detail.</h2>
-			<br/><br/>
-	  		<hr color="black" size=1 width="150">
-	  		<hr color="black" size=1 width="150">
-	  		<br/><br/>
-			<button id="btn" class="btn" type="button" >
-				MEET OUR TEAM
-			</button>
-		</div>
+		<h3>Truly great food is a combination of quality<br/> ingredients, creativity, and attention to detail.</h3>
+  		<hr color="black" size=1 width="150">
+  		<hr color="black" size=1 width="150"><br/>
+		<button class="btn" type="button" >
+			MEET OUR TEAM
+		</button>	
 	</section>
 	<section id="fourth-section">
-		<div>
+		<div class="container">
 			<h2>PEOPLE</h2>
 			<br/>
-			<h4>We are a group of professionals and artisan chefs whith a passion for culinary excellence.</h4>
-			<br/><br/>
+			<h4>We are a group of professionals and artisan chefs whith a passion for culinary excellence.</h4><br/>
 	  		<hr color="black" size=1 width="150">
 	  		<hr color="black" size=1 width="150">
-	  		<br/><br/>
+	  		<div class="row">
+				<div class="col-xs-12 col-md-4 col1">
+					<img src="img/1.jpg">
+					<div class="overlay">
+						<div class="caption">			
+	                        <h3>Alan Wimbledon</h3>
+	                        <hr color="black" size=1 width="150">
+  							<hr color="black" size=1 width="150">
+	                        <em>Owner</em>
+	                        <ul class="list-inline list-team-social">
+	                            <li class="list-inline-item">
+	                                <a href="#"><i class="fa fa-facebook fa-fw"></i></a>
+	                            </li>
+	                            <li class="list-inline-item">
+	                                <a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
+	                            </li>
+	                            <li class="list-inline-item">
+	                                <a href="#"><i class="fa fa-envelope-o fa-fw"></i></a>
+	                            </li>
+	                        </ul>
+	                    </div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-4 col2">
+					<img src="img/2.jpg">
+					<div class="overlay">
+						<div class="caption">			
+	                        <h3>Jeffrey Howard</h3>
+	                        <hr color="black" size=1 width="150">
+  							<hr color="black" size=1 width="150">
+	                        <em>Executive Chef</em>
+	                        <ul class="list-inline list-team-social">
+	                            <li class="list-inline-item">
+	                                <a href="#"><i class="fa fa-facebook fa-fw"></i></a>
+	                            </li>
+	                            <li class="list-inline-item">
+	                                <a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
+	                            </li>
+	                            <li class="list-inline-item">
+	                                <a href="#"><i class="fa fa-envelope-o fa-fw"></i></a>
+	                            </li>
+	                        </ul>
+	                    </div>
+					</div>
+				</div>
+				<div class="col-xs-12 col-md-4 col3">
+					<img src="img/3.jpg">
+					<div class="overlay">
+						<div class="caption">			
+	                        <h3>Kenny Williams</h3>
+	                        <hr color="black" size=1 width="150">
+  							<hr color="black" size=1 width="150">
+	                        <em>Executive Chef</em>
+	                        <ul class="list-inline list-team-social">
+	                            <li class="list-inline-item">
+	                                <a href="#"><i class="fa fa-facebook fa-fw"></i></a>
+	                            </li>
+	                            <li class="list-inline-item">
+	                                <a href="#"><i class="fa fa-linkedin fa-fw"></i></a>
+	                            </li>
+	                            <li class="list-inline-item">
+	                                <a href="#"><i class="fa fa-envelope-o fa-fw"></i></a>
+	                            </li>
+	                        </ul>
+	                    </div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</section>
 	<section id="fifth-section">
-		<div>
+		<div class="container">
 			<h2>PRESS</h2>
-			<br/><br/>
 	  		<hr color="black" size=1 width="150">
 	  		<hr color="black" size=1 width="150">
-	  		<br/><br/>
-	  		<p>Hereś what the critics are saying.</p>
-	  		<br/><br/>
-	  		<h4>"A UNIQUE BLEND OF FLAVORS AT THIS RESTAURANT MADE<br/>
-	  		FOR AN UNFORGETTABLE CULINARY ADVENTURE."</h4>
+	  		<p>Here's what the critics are saying.</p>
+	  		<h3>"A UNIQUE BLEND OF FLAVORS AT THIS RESTAURANT MADE<br/>
+	  		FOR AN UNFORGETTABLE CULINARY ADVENTURE."</h3>
 	  		<br/><br/>
 	  		<hr color="black" size=1 width="150">
 	  		<hr color="black" size=1 width="150">
@@ -144,7 +204,7 @@
 	</section>
 	<section id="sixth-section">
 		<div>
-	  		<h4>SUBSCRIBE TO OUR NEWSLETTER!</h4>
+	  		<h3>SUBSCRIBE TO OUR NEWSLETTER!</h3>
 	  		<br/><br/>
 	  		<hr color="black" size=1 width="150">
 	  		<hr color="black" size=1 width="150">
